# mathmodel_contest

./: README.md  pyproject.toml
mathmodel_contest/: 1st.py  2nd.py  plot3d.py  表二.py
mathmodel_contest/第三题/: 3rd.py
mathmodel_contest/第四题/: main.py  plot3d.py  third.py
