[tool.poetry]
name = "mathmodel-contest"
version = "0.1.0"
description = ""
authors = ["geeker-one <888iagiag888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scipy = "^1.11.2"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
